--- a/src/battle/app/sawhat/public/css/sawhat.css
+++ b/src/battle/app/sawhat/public/css/sawhat.css
@@ -247,10 +247,19 @@ table th, table td {
 .largeborderbottom{ border-bottom-width: 6px; border-style: solid; }
 .noborder{ border: 0; }
 .fullwidth { width: 100%; }
+/* clearfix hack via http://css-tricks.com/snippets/css/clear-fix/ */
+.auto_clear:before,
+.auto_clear:after {
+    content: "";
+    display: table;
+} 
+.auto_clear:after {
+    clear: both;
+}
+.auto_clear {
+    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+}
 .clear { clear: both; }
-.clearer { clear: both;height: 0; margin: 0; padding: 0; display: block; }
-.clear_left, .clearer_left { clear: left; }
-.clear_right, .clearer_right { clear: right; }
 .smaller { font-size: 0.7em; }
 small, .small { font-size: 0.9em; }
 .big { font-size: 1.1em; }
