--- a/src/battle/app/sawhat/public/css/sawhat.css
+++ b/src/battle/app/sawhat/public/css/sawhat.css
@@ -33,114 +33,6 @@
 /* --------- SAWHAT ----------- */
 /* ---------------------------- */
 
-/* ---- Colors ---- */
-body{ 
-	color: #555;
-	background-color: #666;
-}
-a, h1 { color: #999; }
-a:hover{ 
-	color: #999; 
-	color: rgba(0,0,0,0.3); }
-hr{
-	color: #ccc;
-	background-color: #ccc;
-}
-h1,h2,h3,h4 { border-color: rgba(0,0,0,0.3); }
-*:not(pre) > code {
-	background: #eee;
-	border-color: #ccc;
-}
-blockquote {
-	border-color: rgba(0,0,0,0.2);
-	background: rgba(0,0,0,0.05);
-}
-table th, table td { border-color: rgba(0,0,0,0.2); }
-tbody tr:nth-child(odd) { background-color: rgba(0,0,0,0.1); }
-
-.hidden_background{ background-color: transparent !important; }
-.transparent{ background: rgb(0, 0, 0);	background: rgba(0, 0, 0, 0.4); }
-.darker{ background: rgba(0, 0, 0, 0.04); }
-.darker_text{ color: rgba(0, 0, 0, 0.3); }
-.lighter_text{ color: rgba(255,255,255, 0.6); }
-.white { background-color: #fff; }
-.white_text { color: #fff; }
-.black_text { color: #000; }
-.border{ border-color: rgba(0, 0, 0, 0.05); }
-.largeborderbottom{ border-color: #999; }
-.error{ color : red; }
-
-header{ border-color: #fff; }
-.content{ background-color: #ccc; }
-footer.content{ background-color: #666;	color: #999; }
-.width_constraint{ background-color: transparent; }
-.content > section > .sawhat,
-.content > section > div > .sawhat {
-	background-color: #fff;
-}
-.things.dark {
-	background: #777;
-	color: #fff;
-}
-.banner{ 
-	background-color: #999;
-	color: #fff; 
-}
-.fa.lighter_text:hover {
-	color: #fff;
-}
-.fa.darker_text:hover {
-	color: #000;
-}
-.starred_title {
-	background: #bbb;
-	color: #fff;
-}
-.starred_container, .all_cards_container {
-	border-color: #bbb;
-}
-.breadcrumbs {
-	color: #888;
-}
-.breadcrumbs a:hover { color: #fff; }
-.user_utils button,
-.user_utils button:focus {
-	color: #999;
-}
-.user_utils button:hover {
-	color: #fff;
-}
-.column {
-	-webkit-column-rule: 1px solid rgba(0,0,0,0.1);
-	-moz-column-rule: 1px solid rgba(0,0,0,0.1);
-	column-rule: 1px solid rgba(0,0,0,0.1);
-}
-.color_picker {
-	background-color: #fff;
-	border-color: #ccc;
-	box-shadow: 0 0 3px rgba(0,0,0,0.3);
-}
-.color_picker_item {
-	background-color: #fff;
-	border-color: #ccc;
-}
-.uploadprogress{
-	background-color: #fff;
-	border-color: #ddd;
-}
-.uploadprogress .progress-bar{ background-color: #4c0; }
-.image_preview { background: rgba(80,80,80,0.8); }
-#editor { border-color: rgba(0, 0, 0, 0.05); }
-#search_result { background: rgba(255,255,255,0.3); }
-footer a, footer .btn-link {
-	color: #ccc;
-	text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
-}
-footer a:hover, footer .btn-link:hover {
-	color: #eee;
-}
-.btn-link { color: #ccc; }
-
 /* ---- Base Rules / Element Selector ---- */
 body{
 	font: 160%/1.5 Arial, Verdana, sans-serif;
@@ -305,18 +197,19 @@ header{
 	border-style: solid;
 }
 #super_wrapper {
-	position: fixed;
+	/*position: fixed;
 	width: 100%;
 	height: 100%;
-	overflow: auto;
+	overflow: auto;*/
 }
 .content{
 	margin: auto;
 	padding: 0 12px 12px;
 }
-footer.content{
+footer .content{
 	min-height: 150px;
 	padding-top: 12px;
+	margin-top: 12px;
 }
 .width_constraint{
 	max-width: 960px;
