Sawhat: Added Less
Switch to Less files
Cleaned css a bit
Added small install help for WinLess

--- a/src/battle/app/sawhat/public/css/color_scheme/ultra-bright.css
+++ b/src/battle/app/sawhat/public/css/color_scheme/ultra-bright.css
@@ -1,117 +1,1 @@
-@CHARSET "UTF-8";
-
-/* ---------------------------- */
-/* --------- SAWHAT ----------- */
-/* ---------------------------- */
-
-/* ---- Colors ---- */
-body{ 
-	color: #555;
-	background-color: #ccc;
-}
-a, h1 { color: #999; }
-a:hover{ 
-	color: #999; 
-	color: rgba(0,0,0,0.3); }
-hr{
-	color: #ccc;
-	background-color: #ccc;
-}
-h1,h2,h3,h4 { border-color: rgba(0,0,0,0.3); }
-*:not(pre) > code {
-	background: #eee;
-	border-color: #ccc;
-}
-blockquote {
-	border-color: rgba(0,0,0,0.2);
-	background: rgba(0,0,0,0.05);
-}
-table th, table td { border-color: rgba(0,0,0,0.2); }
-tbody tr:nth-child(odd) { background-color: rgba(0,0,0,0.1); }
-
-.hidden_background{ background-color: transparent !important; }
-.transparent{ background: rgb(0, 0, 0);	background: rgba(0, 0, 0, 0.4); }
-.darker{ background: rgba(0, 0, 0, 0.04); }
-.darker_text{ color: rgba(0, 0, 0, 0.3); }
-.lighter_text{ color: rgba(255,255,255, 0.6); }
-.white { background-color: #fff; }
-.white_text { color: #fff; }
-.black_text { color: #000; }
-.border{ border-color: rgba(0, 0, 0, 0.05); }
-.largeborderbottom{ border-color: #999; }
-.error{ color : red; }
-
-#super_wrapper {
-	background-color: #fff;
-}
-header{ border-color: #fff; }
-.content{ background-color: transparent; }
-footer { background-color: #ccc; color: #999; }
-.width_constraint{ background-color: transparent; }
-.content > section > .sawhat,
-.content > section > div > .sawhat {
-	background-color: #fff;
-}
-.things.dark {
-	background: #777;
-	color: #fff;
-}
-.banner{ 
-	background-color: #999;
-	color: #fff; 
-}
-.fa.lighter_text:hover {
-	color: #fff;
-}
-.fa.darker_text:hover {
-	color: #000;
-}
-.starred_title {
-	background: #bbb;
-	color: #fff;
-}
-.starred_container, .all_cards_container {
-	border-color: #bbb;
-}
-.breadcrumbs {
-	color: #888;
-}
-.breadcrumbs a:hover,
-.user_utils button:hover {
-	color: #bbb;
-}
-.user_utils button,
-.user_utils button:focus {
-	color: #999;
-}
-.column {
-	-webkit-column-rule: 1px solid rgba(0,0,0,0.1);
-	-moz-column-rule: 1px solid rgba(0,0,0,0.1);
-	column-rule: 1px solid rgba(0,0,0,0.1);
-}
-.color_picker {
-	background-color: #fff;
-	border-color: #ccc;
-	box-shadow: 0 0 3px rgba(0,0,0,0.3);
-}
-.color_picker_item {
-	background-color: #fff;
-	border-color: #ccc;
-}
-.uploadprogress{
-	background-color: #fff;
-	border-color: #ddd;
-}
-.uploadprogress .progress-bar{ background-color: #4c0; }
-.image_preview { background: rgba(80,80,80,0.8); }
-#editor { border-color: rgba(0, 0, 0, 0.05); }
-#search_result { background: rgba(255,255,255,0.3); }
-footer a, footer .btn-link {
-	color: #888;
-	text-shadow: 0 1px 0 rgba(255,255,255,0.3);
-}
-footer a:hover, footer .btn-link:hover {
-	color: #eee;
-	text-shadow: 0 -1px 0 rgba(0,0,0,0.1);
-}
-.btn-link { color: #ccc; }
+@charset "UTF-8";body{color:#555;background-color:#ccc}a,h1{color:#999}a:hover{color:#999;color:rgba(0,0,0,.3)}hr{color:#ccc;background-color:#ccc}h1,h2,h3,h4{border-color:rgba(0,0,0,.3)}:not(pre)>code{background:#eee;border-color:#ccc}blockquote{border-color:rgba(0,0,0,.2);background:rgba(0,0,0,.05)}table th,table td{border-color:rgba(0,0,0,.2)}tbody tr:nth-child(odd){background-color:rgba(0,0,0,.1)}.transparent{background:#000;background:rgba(0,0,0,.4)}.darker{background:rgba(0,0,0,.04)}.darker_text{color:rgba(0,0,0,.3)}.lighter_text{color:rgba(255,255,255,.6)}.white{background-color:#fff}.white_text{color:#fff}.black_text{color:#000}.border{border-color:rgba(0,0,0,.05)}.error{color:red}#super_wrapper{background-color:#fff}.content{background-color:transparent}footer{background-color:#ccc;color:#999}.width_constraint{background-color:transparent}.content>section>.sawhat,.content>section>div>.sawhat{background-color:#fff}.things.dark{background:#777;color:#fff}.banner{background-color:#999;color:#fff}.fa.lighter_text:hover{color:#fff}.fa.darker_text:hover{color:#000}.starred_title{background:#ccc;color:#fff}.starred_container{border-color:#ccc}.breadcrumbs{color:#888}.breadcrumbs a:hover,.user_utils button:hover{color:#bbb}.user_utils button,.user_utils button:focus{color:#999}.column{-webkit-column-rule:1px solid rgba(0,0,0,.1);-moz-column-rule:1px solid rgba(0,0,0,.1);column-rule:1px solid rgba(0,0,0,.1)}.color_picker{background-color:#fff;border-color:#ccc;box-shadow:0 0 3px rgba(0,0,0,.3)}.color_picker_item{background-color:#fff;border-color:#ccc}.uploadprogress{background-color:#fff;border-color:#ddd}.uploadprogress .progress-bar{background-color:#4c0}.image_preview{background:rgba(80,80,80,.8)}#editor{border-color:rgba(0,0,0,.05)}#search_result{background:rgba(255,255,255,.3)}footer a,footer .btn-link{color:#888;text-shadow:0 1px 0 rgba(255,255,255,.3)}footer a:hover,footer .btn-link:hover{color:#eee;text-shadow:0 -1px 0 rgba(0,0,0,.1)}.btn-link{color:#ccc}
