--- a/src/battle/app/timeline/public/css/timeline.css
+++ b/src/battle/app/timeline/public/css/timeline.css
@@ -33,6 +33,8 @@ h6, .h6{ font-family: 'Montserrat', sans-serif; font-size: .75em; line-height: 1
 nav{ margin: 12px 0; }
 img { max-width: 100%; }
 
+.hidden{ display: none !important; }
+
 .content{ 
 	margin: auto; 
 	max-width: 960px;
@@ -46,7 +48,10 @@ img { max-width: 100%; }
 	padding: 12px;
 	margin: 12px 0;
 }
-.watcher form{
+.watcher__more_button{
+	margin: 12px;
+}
+.watcher__form{
 	background-color: #aaa;
 	padding: 12px;
 }
