--- a/src/battle/app/101_upload/public/css/101_upload.css
+++ b/src/battle/app/101_upload/public/css/101_upload.css
@@ -31,21 +31,55 @@ h6, .h6{ font-family: 'Montserrat', sans-serif; font-size: .75em; line-height: 1
 header{ margin: 12px 0; }
 nav{ margin: 12px 0; }
 
+body{
+	background-color: #2b2b2b;
+	color: white;
+}
+
 .hidden{ display: none !important; }
 
 .content{ 
 	margin: auto; 
 	max-width: 960px;
 	padding: 12px;
+	text-align: center;
 }
 
 form{
-	background-color: pink;
+	background-color: white;
 }
 
 img{
 	max-width: 100%;
 	height: auto;
+}
+
+.upload_form{
+	color: #2b2b2b;
+	padding: 12px;
+}
+
+.upload_form span{
+	padding-bottom: 12px;
+}
+
+/* Components */
+
+.uploadprogress{
+	position: relative;
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+}
+.uploadprogress .bar{
+	width: 0;
+	height: 40px;
+}
+.uploadprogress p{
+	position: absolute;
+	top: 0;
+	left: 12px;
 }
 
 /* ---- BS fixes ---- */
