--- a/src/battle/app/101_upload/public/css/101_upload.css
+++ b/src/battle/app/101_upload/public/css/101_upload.css
@@ -32,7 +32,6 @@ header{ margin: 12px 0; }
 nav{ margin: 12px 0; }
 
 body{
-	font-family: Arial;
 	background-color: #2b2b2b;
 	color: white;
 }
@@ -54,6 +53,10 @@ img{
 	max-width: 100%;
 	height: auto;
 }
+p{
+	padding-bottom: 12px;
+	line-height: 1.25em;
+}
 
 .upload_form{
 	color: #2b2b2b;
@@ -66,14 +69,14 @@ img{
 
 /* Components */
 
-
-
 .uploadprogress{
-	position: relative;
 	width: 100%;
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
+	background-color: yellow;
+	position:absolute;
+	top: 0;
 }
 .uploadprogress .bar{
 	width: 0;
@@ -103,11 +106,6 @@ img{
     direction: ltr;
     cursor: pointer;
 }
-.uploadprogress{
-	background-color: yellow;
-	position:absolute;
-	top: 0;
-}
 
 /* ---- BS fixes ---- */
 
@@ -116,7 +114,7 @@ img{
 }
 
 /* ---- Jasny fixes ---- */
-.fileinput {
+/*.fileinput {
     margin-bottom: 0;
     display: block;
-}
+}*/
