--- a/src/battle/app/101_upload/public/css/101_upload.css
+++ b/src/battle/app/101_upload/public/css/101_upload.css
@@ -2,42 +2,39 @@
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
-
-a{ text-decoration: none; }
-a.underline{ text-decoration: underline; }
-img{ max-width: 100%; }
+/* ---- COLORS ---- */
 body{
+	color: #ddd;
 	background-color: #2b2b2b;
-	color: white;
 }
+a, a:hover{ color: #ddd; }
 form{ background-color: white; }
+.uploadprogress .bar{ background-color: yellow; }
+
+/* ---- LAYOUT ----*/
+body{ font-family: Arial; }
+a{ text-decoration: none; }
+a:hover{ text-decoration: underline; }
 img{
 	max-width: 100%;
 	height: auto;
 }
-p.description{
-	padding: 12px 0;
-	line-height: 1.25em;
-}
 
 .hidden{ display: none !important; }
-
 .content{ 
 	margin: auto; 
 	max-width: 960px;
 	padding-bottom: 12px;
 	text-align: center;
 }
-
-.upload_form{
-	color: #2b2b2b;
-	padding: 12px;
-}
-.upload_form span{
-	padding-bottom: 12px;
+.description{
+	padding: 12px 0;
+	line-height: 1.5em;
 }
 
-/* Components */
+/* Form */
+
+.upload_form{ padding: 12px; }
 
 .uploadprogress{
 	width: 100%;
@@ -50,7 +47,6 @@ p.description{
 .uploadprogress .bar{
 	width: 0;
 	height: 32px;
-	background-color: yellow;
 }
 .uploadprogress p{
 	position: absolute;
@@ -58,10 +54,11 @@ p.description{
 	left: 12px;
 }
 
+/* Components */
+
 #dat_file_container{
 	position: relative;
 	display: inline-block;
-	text-align: center;
 	max-width: 100%;
 }
 #dat_file_container > input {
