--- a/src/battle/app/101_upload/public/css/101_upload.css
+++ b/src/battle/app/101_upload/public/css/101_upload.css
@@ -8,8 +8,9 @@ body{
 	background-color: #2b2b2b;
 }
 a, a:hover{ color: #ddd; }
-form{ background-color: white; }
+.upload_form{ background-color: #272727; }
 .uploadprogress .bar{ background-color: yellow; }
+.uploadprogress { color: #2b2b2b; }
 
 /* ---- LAYOUT ----*/
 body{ font-family: Arial; }
@@ -19,12 +20,12 @@ img{
 	max-width: 100%;
 	height: auto;
 }
-
+footer, .footer { padding: 12px; }
 .hidden{ display: none !important; }
-.content{ 
+.content{
+	padding: 12px; 
 	margin: auto; 
 	max-width: 960px;
-	padding-bottom: 12px;
 	text-align: center;
 }
 .description{
@@ -33,14 +34,15 @@ img{
 }
 
 /* Form */
-
-.upload_form{ padding: 12px; }
-
+.upload_form{ 
+	padding: 12px; 
+	max-width: 100%;
+	display: inline-block;
+}
 .uploadprogress{
 	width: 100%;
 	height: 32px;
 	line-height: 32px;
-	text-align: center;
 	position: absolute;
 	top: 0;
 }
@@ -55,7 +57,6 @@ img{
 }
 
 /* Components */
-
 #dat_file_container{
 	position: relative;
 	display: inline-block;
