--- a/src/battle/app/101_upload/public/css/101_upload.css
+++ b/src/battle/app/101_upload/public/css/101_upload.css
@@ -8,7 +8,7 @@ body{
 	background-color: #2b2b2b;
 }
 a, a:hover{ color: #ddd; }
-.upload_form{ background-color: #272727; }
+.upload_form, .image_container{ background-color: #272727; }
 .uploadprogress .bar{ background-color: yellow; }
 .uploadprogress { color: #2b2b2b; }
 
@@ -34,17 +34,17 @@ footer, .footer { padding: 12px; }
 }
 
 /* Form */
-.upload_form{ 
+.upload_form, .image_container{ 
 	padding: 12px; 
 	max-width: 100%;
 	display: inline-block;
 }
 .uploadprogress{
+	position: absolute;
+	top: 0;
 	width: 100%;
 	height: 32px;
 	line-height: 32px;
-	position: absolute;
-	top: 0;
 }
 .uploadprogress .bar{
 	width: 0;
@@ -57,12 +57,12 @@ footer, .footer { padding: 12px; }
 }
 
 /* Components */
-#dat_file_container{
+#dat_file_container, .upload-btn_container{
 	position: relative;
 	display: inline-block;
 	max-width: 100%;
 }
-#dat_file_container > input {
+#dat_file_container > input, .upload-btn_container > input {
     position: absolute;
     top: 0px;
     right: 0px;
@@ -73,4 +73,20 @@ footer, .footer { padding: 12px; }
     width: 100%;
     direction: ltr;
     cursor: pointer;
+}
+
+.upload-btn_title{
+	padding: 24px;
+	background-color: black;
+}
+.upload-btn_container .uploadprogress{
+	position: absolute;
+	bottom: 0;
+	top: auto;
+	height: 6px;
+	line-height: 6px;
+}
+.upload-btn_container .uploadprogress .bar{
+	width: 0;
+	height: 6px;
 }
