--- a/src/battle/app/101_upload/public/css/101_upload.css
+++ b/src/battle/app/101_upload/public/css/101_upload.css
@@ -1,7 +1,10 @@
+/* ---- 101_upload.css ---- */
+
 /* apply a natural box layout model to all elements */
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+
 /* ---- COLORS ---- */
 body{
 	color: #ddd;
