[Sawhat] added json rest API v0.1 + JS + WIP card update form

--- a/src/battle/app/sawhat/public/less/color_scheme/default.less
+++ b/src/battle/app/sawhat/public/less/color_scheme/default.less
@@ -7,7 +7,7 @@
 /* ---- Colors ---- */
 body{ 
 	color: #555;
-	background-color: #666;
+	background-color: #2b2b2b;/*#666;*/
 }
 a, h1 { color: #999; }
 a:hover{ 
@@ -40,16 +40,16 @@ tbody tr:nth-child(odd) { background-color: rgba(0,0,0,0.1); }
 .error{ color : red; }
 
 #super_wrapper {
-	background-color: #666;
+	background-color: #2b2b2b;
 }
 .content{ background-color: #ccc; }
-footer { background-color: #666; color: #999; }
+footer { background-color: #2b2b2b; color: #999; }
 .width_constraint{ background-color: transparent; }
 .content > section > .sawhat,
 .content > section > div > .sawhat {
 	background-color: #fff;
 }
-.things.dark {
+.card__content.dark {
 	background: #777;
 	color: #fff;
 }
@@ -111,3 +111,8 @@ footer a:hover, footer .btn-link:hover {
 	color: #eee;
 }
 .btn-link { color: #ccc; }
+
+.btn-sawhat-default,.upload-btn_title{
+	background-color: #2b2b2b;
+	color: white;
+}
