--- a/src/battle/app/sawhat/public/less/color_scheme/ultra-bright.less
+++ b/src/battle/app/sawhat/public/less/color_scheme/ultra-bright.less
@@ -54,7 +54,7 @@ footer { background-color: @footer_background; color: #999; }
 .content > section > div > .sawhat {
 	background-color: @main_background;
 }
-.things.dark {
+.card__content.dark {
 	background: #777;
 	color: #fff;
 }
