--- a/src/battle/app/sawhat/public/less/sawhat.less
+++ b/src/battle/app/sawhat/public/less/sawhat.less
@@ -275,7 +275,8 @@ footer .content{
 /* ---- Breadcrumbs ---- */
 .breadcrumbs {
 	display: inline-block;
-	padding: 4px 0;
+	/*padding: 4px 0;*/
+	line-height: 40px;
 	margin: 0;
 	border-radius: 0;
 }
@@ -506,7 +507,7 @@ footer form, footer input {
 .btn-link {
 	display: inline;
 	padding: 0;
-	font-size: 1em;
+	font-size: 1.5em;/*1em*/
 }
 .control-label {
 	font-weight: normal;
